# OompaSale

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  qml.qrc  run.sh
migrations/: 0001_initial_schema.sql
qml/: Cart.qml  Chart.qml  CustomerForm.qml  CustomerList.qml  ErrorDialog.qml  Help.qml  InventoryList.qml  ItemForm.qml  ReportsDashboard.qml  SalesScreen.qml  Settings.qml  main.qml
specs/001-frontend-ui/: plan.md  spec.md  tasks.md
src/: api.rs  auth.rs  cxxqt.rs  database.rs  export.rs  lib.rs  receipt.rs  sync.rs
src/models/: customer.rs  item.rs  mod.rs  report.rs  sale.rs
src/services/: analytics.rs  checkout.rs  customer.rs  inventory.rs  mod.rs  payment.rs
web/: index.html
