[package]
name = "oompasale"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
cxx-qt = "0.6"
cxx-qt-lib = "0.6"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-bigdecimal"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cxx-qt-build = "0.6"
